<resources>
    <string name="recording">录音</string>
    <string name="mediaRecorder">MediaRecorder</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="image">Image</string>
    <string name="Audio">Audio</string>
    <string name="camera2">camera2</string>
    <string name="getCameraInfo">CameraInfo</string>
    <string name="camerax">cameraX</string>
</resources>