<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avi.AviMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBg.blue10"
            android:text="@string/image" />
        <TextView
            android:id="@+id/tv_Recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBg.blue10"
            android:text="@string/Audio" />
        <TextView
            android:id="@+id/tv_camera2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonBg.blue10"
            android:text="@string/camera2" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>