<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.avi.menu.RecordingActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediaRecorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_startMediaRecorder"
        style="@style/itemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_stopMediaRecorder"
        style="@style/itemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/tv_startMediaRecorder"
        app:layout_constraintStart_toEndOf="@+id/tv_startMediaRecorder"
        app:layout_constraintTop_toTopOf="@+id/tv_startMediaRecorder" />




</androidx.constraintlayout.widget.ConstraintLayout>